# detect-missing-init

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
hook/: detect_missing_init.py  exceptions.py
tests/: test_detect_missing_init.py
