[tool.poetry]
name = "detect-missing-init-files"
version = "0.1.0"
description = ""
authors = ["Luuk Verweij <luuk_verweij@msn.com>"]

packages = [
    { include="hook", from="." },
]

[tool.poetry.dependencies]
python = "^3.8"
GitPython = "^3.1.24"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pdbpp = "^0.10.3"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
detect-missing-init = "hook.detect_missing_init:main"
